<resources>
    <string name="app_name">News App</string>
    <string name="title_activity_content">ContentActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="api_key_valid">72348182e6434dee9875f07568b29334</string>

    <string name="signed_out">Signed Out</string>
    <string name="sign_out">Sign Out</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="status_code_sent">Code Sent</string>
    <string name="status_verification_failed">Verification failed</string>
    <string name="status_verification_succeeded">Verification succeeded</string>
    <string name="status_sign_in_failed">Sign-in failed</string>
    <string name="instant_validation">(instant validation)</string>
    <string name="signed_in">Signed In</string>
    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="title_activity_categories">CategoriesActivity</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_news_details">NewsDetailsActivity</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="an_image">AN IMAGE</string>
    <string name="cancel_alarm">Cancel Reminder</string>
    <string name="set_alarm_to_get_a_notification_each_30_minutes">Set Alarm to Get A Notification each 30 minutes</string>
    <string name="business_news">Business News</string>
    <string name="entertainment_news">Entertainment News</string>
    <string name="tech_news">Tech News</string>
    <string name="sports_news">Sports News</string>
    <string name="general_news">General News</string>
    <string name="health_news">Health News</string>
    <string name="science_news">Science News</string>
    <string name="fac_news">Favourite News</string>
    <string name="data_retrevial_error_message">ERROR RETRIEVING DATA</string>
    <string name="business">business</string>
    <string name="entertainment">entertainment</string>
    <string name="technology">technology</string>
    <string name="sports">sports</string>
    <string name="general">general</string>
    <string name="health">health</string>
    <string name="science">science</string>
    <string name="title_categories_action_bar">News For You</string>
    <string name="test_device_id">33BE2250B43518CCDA7DE426D04EE231</string>
    <string name="login_failed_message">failure</string>
    <string name="login_successful_message">YOU LOGGED IN SUCCESSFULLY!!</string>
    <string name="not_found_data">NOT FOUND</string>
    <string name="open_app_for_details">Open India\'s News App</string>
    <string name="reminder_is_set">Reminder is set :)  Congrats!!</string>
    <string name="reminder_is_cancelled">Reminder Cancel Success!!</string>
    <string name="articles_not_found_msg">NO FAVORITE ARTICLES FOUND!!</string>
    <string name="india_s_news_nlogin_with">INDIA\'s NEWS  LOGIN WITH</string>
    <string name="news_article_title">NEWS ARTICLE TITLE</string>
    <string name="description_of_the_article">DESCRIPTION OF THE ARTICLE</string>
    <string name="click_here_to_read_more">Click Here to Read More</string>
    <string name="welcome_to">Welcome to</string>
    <string name="ab">About App</string>
    <string name="speak">Speak</string>
    <string name="stop">Stop</string>
    <string name="wel_message">Welcome Please Select a Category! in navigation menu in left side</string>
    <string name="set_reminder">Set Reminder</string>
    <string name="set_alarm">Set Alarm</string>
    <string name="image_content_description">Image of News Article</string>
    <string name="news_categories">News Categories:</string>
    <string name="name">name</string>
    <string name="enter_your_name_here">enter your name here</string>
    <string name="email">email</string>
    <string name="enter_your_email_id_here">enter your email id here</string>
    <string name="feedback">feedback</string>
    <string name="enter_your_feedback_here">enter your feedback here</string>
    <string name="send_feedback">Send feed back</string>
    <string name="view_submitted_details">View submitted details</string>
    <string name="display">Your Data was received by developer of this app</string>
    <string name="unavail">INTERNET UNAVAILABLE</string>
</resources>
